cleaned up code

--- a/index.css
+++ b/index.css
@@ -19,7 +19,7 @@ body {
 }
 
 #traffic-light {
-  background-color: #ababab;
+  background-color: #f8d004;
   border-radius: 40px;
   margin: 30px 0;
   height: 550px;
